--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all contributors to the repository.
 
 Chernov Alexey <alexchernov063@gmail.com>
-Ines Oubabas <xxx@gmail.com
+Ines Oubabas <inesoubabas56@gmail.com>
